# Fruit

arm_control/: CMakeLists.txt  package.xml
arm_control/action/: Grab.action
arm_control/include/arm_control/: arm_control.hpp
arm_control/launch/: arm_control.launch.py
arm_control/src/: arm_control.cpp  arm_control_node.cpp
arm_moveit/: .setup_assistant  package.xml
arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  simple_arm_parts.ros2_control.xacro  simple_arm_parts.srdf  simple_arm_parts.urdf.xacro
arm_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fruit_detector/: CMakeLists.txt  package.xml
fruit_detector/include/fruit_detector/: fruit_detector.hpp  openvino_detect.hpp
fruit_detector/launch/: fruit_detector.launch.py
fruit_detector/src/: fruit_detector.cpp  fruit_detector_node.cpp  openvino_detect.cpp
fruit_start/: CMakeLists.txt  package.xml
fruit_start/launch/: fruit_system.launch.py
navigation/: CMakeLists.txt  package.xml
navigation/action/: Move.action
navigation/include/navigation/: navigation.hpp
navigation/launch/: navigation.launch.py
navigation/msg/: MoveMsg.msg
navigation/src/: navigation.cpp  navigation_node.cpp
serial_sender/: CMakeLists.txt  README.md  package.xml
serial_sender/include/serial_sender/: serial_sender.hpp  struct_serializer.hpp
serial_sender/launch/: serial_sender.launch.py
serial_sender/src/: serial_node.cpp  serial_sender.cpp  struct_serializer.cpp
simple_arm_parts_description/: package.xml  setup.cfg  setup.py
simple_arm_parts_description/launch/: display.launch.py  gazebo.launch.py
simple_arm_parts_description/meshes/: arm1_1.stl  arm2_1.stl  base_link.stl  end_1.stl  root_1.stl
simple_arm_parts_description/urdf/: materials.xacro  simple_arm_parts.gazebo  simple_arm_parts.trans  simple_arm_parts.xacro
task_planner/: CMakeLists.txt  package.xml
task_planner/include/task_planner/: task_planner.hpp
task_planner/launch/: task_planner.launch.py  task_system.launch.py
task_planner/src/: task_planner.cpp  task_planner_node.cpp
usb_camera/: CMakeLists.txt  package.xml
usb_camera/config/: head_camera.yaml
usb_camera/include/usb_camera/: camera_params_publisher.hpp
usb_camera/launch/: usb_camera.launch.py
usb_camera/src/: camera_params_publisher.cpp
