<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fruit_start</name>
  <version>0.0.1</version>
  <description>Package to launch the fruit detection system components</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>usb_camera</exec_depend>
  <exec_depend>fruit_detector</exec_depend>
  <exec_depend>arm_moveit</exec_depend>
  <exec_depend>arm_control</exec_depend>
  <exec_depend>portable_serial_sender</exec_depend>
  <exec_depend>task_planner</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 